--- a/templates/home.html
+++ b/templates/home.html
@@ -2,8 +2,10 @@
 <head></head>
 
 <body>
-<img src="/feed_0">
-<img src="/feed_1">
-<img src="/feed_2">
+% for i,x in enumerate(FEED_CONFIG['feeds']):
+<a href="${x['http_link']}">${x['name']}</a>
+<br><img src="/feed_${i}">
+<hr>
+% endfor
 </body>
 </html>
