--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,18 @@
 <html>
-<head></head>
+<head>
+   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+</head>
 
 <body>
 <div id="video-grid" style="display: grid; grid-auto-flow: row; grid-template-columns: auto auto; grid-gap: 10px; padding: 20px 0px 0px 50px">
 % for i,x in enumerate(FEED_CONFIG['feeds']):
     <div style="resize:both; overflow: hidden;">
-        <a href="${x['http_link']}">${x['name']}</a>
-        <img src="/feed_${i}" class='feed_img' id="feed_${i}" style="height: 100%; width: 100%">
+        <a href="${x['http_link']}">${x['name']}</a><br>
+        <video controls autoplay muted="true" feed-index="${i}"></video>
     </div>
 % endfor
 </div>
+
+<script src="js/index.js"></script>
 </body>
 </html>
