--- a/static/css/index.css
+++ b/static/css/index.css
@@ -5,9 +5,15 @@ video {
 #video-grid {
     display: grid;
     grid-auto-flow: row;
-    grid-template-columns: auto auto;
+    grid-template-columns: 50% 50%;
     grid-gap: 10px;
     padding: 0px 0px 0px 50px
+}
+
+@media (max-width:960px) {
+    #video-grid {
+        height: 100%
+    }
 }
 
 #video-grid > div {
